// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|create proposal create proposal 1`] = `
Object {
  "createProposal": Object {
    "proposal": Object {
      "facebookUrl": null,
      "twitterUrl": null,
      "webPageUrl": null,
    },
  },
}
`;

exports[`Internal|create proposal create proposal from back office as ROLE_PROJECT_ADMIN as owner 1`] = `
Object {
  "createProposalFromBackOffice": Object {
    "proposal": Object {
      "author": Object {
        "username": "mauriau",
      },
      "body": "Les RS, c'est trop bien pour la vulga scientifique",
      "facebookUrl": "https://www.facebook.com/JVCArmy/",
      "publishedAt": "2021-09-02 00:00:00",
      "title": "j'ai des liens facebook et twitter à vendre",
      "twitterUrl": "https://twitter.com/bestof_1825",
      "webPageUrl": "http://cap-collectif.com",
    },
  },
}
`;

exports[`Internal|create proposal create proposal from back office as admin 1`] = `
Object {
  "createProposalFromBackOffice": Object {
    "proposal": Object {
      "author": Object {
        "username": "mauriau",
      },
      "body": "Les RS, c'est trop bien pour la vulga scientifique",
      "facebookUrl": "https://www.facebook.com/JVCArmy/",
      "publishedAt": "2021-09-02 00:00:00",
      "title": "j'ai des liens facebook et twitter à vendre",
      "twitterUrl": "https://twitter.com/bestof_1825",
      "webPageUrl": "http://cap-collectif.com",
    },
  },
}
`;

exports[`Internal|create proposal create proposal with social networks 1`] = `
Object {
  "createProposal": Object {
    "proposal": Object {
      "facebookUrl": "https://www.facebook.com/JVCArmy/",
      "twitterUrl": "https://twitter.com/bestof_1825",
      "webPageUrl": "http://cap-collectif.com",
    },
  },
}
`;
